<resources>
    <string name="app_name">Auctus</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="item_name_placeholder">Item name placeholder</string>
    <string name="auction_item_description_placeholder">Item Description placeholder</string>
    <string name="auction_startdate_placeholder">Start date: </string>
    <string name="auction_enddate_placeholder">End date: </string>
    <string name="new_bid">Bid</string>
    <string name="bids">Bids on auction</string>
    <string name="undefined">UNDEFINED</string>
    <string name="user_name_placeholder">User name placeholder</string>
    <string name="user_email_placeholder">placeholder@placeholder.com</string>

    <string name="item_auctions">Auctions for item</string>
    <string name="latest_bid">Latest bid</string>
    <string name="show_splash">Splash Screen</string>
    <string name="show_splash_def">true</string>
    <string name="show_splash_summ">Show Splash Screen on startup</string>
    <string name="show_splash_title">Splash Screen</string>
    <string name="splash_length">Splash Screen Length</string>
    <string name="user_settings">User settings</string>
    <string name="user_name">Name</string>
    <string name="user_name_seller">Name: </string>
    <string name="user_name_def">Default</string>
    <string name="user_email">email</string>
    <string name="user_email_seller">email: </string>
    <string name="user_email_def">Default@def.com</string>
    <string name="user_address">Address</string>
    <string name="user_address_seller">Address: </string>
    <string name="user_address_def">Default</string>
    <string name="user_password">Password</string>
    <string name="user_password_def">Default</string>
    <string name="user_phone">Phone number</string>
    <string name="user_phone_seller">Phone number: </string>
    <string name="user_phone_def">0123456789</string>
    <string name="startprice">Start price</string>
    <string name="seller_contact">See Contact info</string>

    <string name="settings">Settings</string>
    <string name="filter">Filter</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">closed drawer</string>

    <string name="item_sold_yes">ITEM SOLD</string>
    <string name="item_sold_no">ITEM NOT YET SOLD</string>

    <string name="item_no_auctions">NO ACTIVE AUCTIONS</string>
    <string name="auction_own">You can\'t bid on your own auction!</string>
    <string name="no_participation">You haven\'t participated in any auctions!</string>
    <string name="no_unsold">No unsold items!</string>

    <string name="filter_name">Item name:</string>
    <string name="filter_description">Item description:</string>

    <string name="all">All</string>
    <string name="ongoing">Ongoing</string>
    <string name="finished">Finished</string>

</resources>
