<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuctionsActivity">

<android.support.design.widget.AppBarLayout
    android:id="@+id/appbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.AppBarOverlay">

    <!-- Add this, so AppBarLayout has a bug, which causes ViewPager not to show listview entirely on the screen
    Adding this view fixes (workaround) the problem -->

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarItems"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:layout_scrollFlags="scroll|enterAlways"/>

</android.support.design.widget.AppBarLayout>

<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <!-- The main content view -->
    <RelativeLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ListView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/auctions_list"
            android:choiceMode="singleChoice"/>

        <TextView
            android:visibility="gone"
            android:layout_marginLeft="10dp"
            android:id="@+id/lblNoAuctionsForUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_participation"
            android:textSize="22dp"/>

    </RelativeLayout>

    <!-- The navigation drawer -->
    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:id="@+id/drawerPane"
        android:layout_gravity="start"
        android:background="#ffffffff"
        android:clickable="true">

        <!-- List of Actions (pages) -->
        <ListView
            android:id="@+id/drawerList"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice" />

        <LinearLayout
            android:layout_below="@id/drawerList"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_margin="3dp"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:id="@+id/drawer_user_image"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:layout_margin="1dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/drawer_user_name"
                android:text="@string/user_name_placeholder"/>

            <TextView
                android:layout_margin="1dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/drawer_user_email"
                android:text="@string/user_email_placeholder"/>

            <TextView
                android:layout_margin="1dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/drawer_user_address"
                android:text=""/>

            <TextView
                android:layout_margin="1dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/drawer_user_phone"
                android:text=""/>

        </LinearLayout>

    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>


</LinearLayout>